--- a/react-project/src/index.css
+++ b/react-project/src/index.css
@@ -2,4 +2,10 @@
   display: grid;
   grid-template-columns: auto auto;
   margin: 20px;
+  gap: 10px;
+}
+
+hr {
+  grid-column: 1 / 3;
+  width: 100%;
 }
