--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,16 @@
-.Cards {
-  grid-column: 1 / 3;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 20px;
-}
-
-.Card {
-  border: 1px solid rgb(204, 198, 198);
-  border-radius: 10px;
-  padding: 10px;
-}
-
 .loading,
 .no-results {
   text-align: center;
   font-size: 30px;
   justify-content: center;
   grid-column: 1/ 3;
+}
+
+main {
+  padding: 20px;
+}
+
+footer {
+  text-align: center;
+  font-size: 1rem;
 }
