--- a/src/main.css
+++ b/src/main.css
@@ -10,17 +10,28 @@ html {
 
 body {
   margin: 0;
+  font-family: sans-serif;
+  height: 100%;
+  padding: 0;
 }
 
 #root {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  padding: 10px;
-  align-items: center;
+  min-height: 100vh;
   gap: 20px;
 }
 
 main {
   flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+footer {
+  flex-shrink: 0;
+  text-align: center;
+  font-size: 1rem;
+  padding: 10px;
 }
