--- a/src/components/error/ErrorPage.module.css
+++ b/src/components/error/ErrorPage.module.css
@@ -1,8 +1,8 @@
-
 .errorPage {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh
+  height: 100vh;
+  padding: 30px;
 }
